header section added

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <li class="text-gray-600"><a>Contact Us</a></li>          
               </ul>
             </div>
-            <div class="navbar-end gap-5 ">
-             
+            <div class="navbar-end gap-3 ">        
                 <div class="text-lg hidden lg:block">
                 <button> <i class="fa-solid fa-magnifying-glass"></i></button>
                 <button><i class="fa-solid fa-cart-shopping"></i></button>                             
@@ -76,8 +75,8 @@
                 <img class="mx-auto w-80 lg:w-auto" src="image/banner.png" alt="">
             </div>
             <div class="text-center">
-                <h1 class="lg:text-4xl md:text-3xl text-2xl font-bold mb-5">A barn house of this design has a <br> striking appearance</h1>
-                <p class="text-gray-500 lg:w-5/12 w-96 mx-auto mb-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring  weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <h1 class="lg:text-4xl md:text-3xl text-2xl font-bold mb-4">A barn house of this design has a<br>striking appearance</h1>
+                <p class="text-gray-500 lg:w-5/12 w-96 mx-auto mb-4">Modern barn designs are the dream of many people who value a striking appearance and the possibility of personalisation. </p>
                 <button class=" px-8 py-4 rounded-full font-lg text-black font-bold text-lg bg-button-primary-2">View Details  <i class="fa-solid fa-arrow-right text-black text-xl -rotate-45 bg-button-primary rounded-full"></i></button>
             </div>
             
