--- a/index.html
+++ b/index.html
@@ -175,8 +175,61 @@
                </div>
             </div>  
           </section>
-       
-        
+          <!-- Our Latest Portfolio section -->
+           <section class="my-20">
+              <div class="py-14">
+              <div class="text-center ">
+                <button class=" lg:px-4 lg:py-1 px-5 py-2 rounded-full font-lg  text-black font-bold text-lg bg-button-primary-2 mb-4"><i class="fa-solid fa-arrow-right text-black text-xl "></i>Explore our Latest works</button>
+                <h1 class="lg:text-4xl text-3xl font-bold  mb-4 ">Our Latest Portfolio</h1>
+                <p class="text-gray-600 lg:w-7/12 mx-auto mb-8 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              </div>
+              <!-- card-1 -->
+              <div class="grid grid-cols-1 lg:grid-cols-3 gap-5 lg:px-20">
+                <div class="lg:col-span-2 border border-gray-200 rounded-lg shadow-md bg-white flex p-10">
+                  <div class="lg:flex gap-10">     
+                    <div>
+                      <img class="lg:w-96 lg:h-52 " src="image/img1.png" alt="">
+                    </div>
+                    <div class=" space-y-6 my-5 ">
+                      <h3 class="font-bold text-2xl">Commerial</h3>
+                      <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                      <button class="font-bold text-2xl ">View Details <i class="fa-solid fa-arrow-right text-black text-xl -rotate-45 bg-button-primary rounded-full"></i></button>
+                    </div>
+                </div>
+                </div>
+                <div class=" shadow-md border border-gray-200 rounded-lg p-10 bg-white">
+                  <div>
+                    <img class="lg:w-96 lg:h-52" src="image/img2.png" alt="">
+                  </div>
+                </div>
+              </div>
+              <!-- card-2 -->
+               <div class="grid grid-cols-1  my-5 lg:grid-cols-4 gap-5 lg:px-20">
+                <div class="lg:col-span-1 border border-gray-200 rounded-lg shadow-md bg-white flex p-10">
+                  <div>
+                    <img class="lg:w-96 lg:h-52" src="image/img3.png" alt="">
+                  </div>
+                </div>
+                <div class="lg:col-span-2 border border-gray-200 rounded-lg shadow-md bg-white flex p-10">
+                  <div class="lg:flex gap-10">     
+                    <div>
+                      <img class="lg:w-96 lg:h-52 " src="image/img4.png" alt="">
+                    </div>
+                    <div class=" space-y-6 my-5 ">
+                      <h3 class="font-bold text-2xl">Commerial</h3>
+                      <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern. </p>
+                      <button class="font-bold text-2xl ">View Details <i class="fa-solid fa-arrow-right text-black text-xl -rotate-45 bg-button-primary rounded-full"></i></button>
+                    </div>
+                </div>
+                </div>
+                <div class="lg:col-span-1 border border-gray-200 rounded-lg shadow-md bg-white flex p-10">
+                  <div class="lg:flex gap-10">     
+                    <div>
+                      <img class="lg:w-96 lg:h-52 " src="image/img4.png" alt="">
+                    </div>
+                  </div>
+               </div>
+            </div>       
     </main>
     <footer>
 
