--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <div class="bg-cl-3 p-10">
                 <div class="text-center ">
                   <h1 class="lg:text-3xl text-2xl font-bold mb-4 ">A Reclaimed Wood And Corten Steel Modern Barn House</h1>
-                  <p class="text-gray-700 mb-8">A barn-like retreat designed to look at home among rolling hills and <br> agricultural buildings. </p>
+                  <p class="text-gray-700 mb-8">A barn-like retreat designed to look at home among rolling hills <br> and agricultural buildings. </p>
                 </div>
                 <div>
                   <img class=" w-80 lg:w-5/12 rounded-2xl mx-auto" src="image/modern Barn House.png" alt="">
